[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "neoteroi-di"
dynamic = ["version"]
authors = [
    { name = "Roberto Prevato", email = "roberto.prevato@gmail.com" },
]
description = "Implementation of dependency injection for Python 3"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Operating System :: OS Independent",
]
keywords = ["dependency", "injection", "type", "hints", "typing"]
dependencies = [
    "typing_extensions; python_version < '3.8'"
]

[tool.hatch.build.targets.sdist]
exclude = [
  "/.github",
  "/docs",
  "/examples",
  "/deps",
  "/htmlcov",
  "/tests",
  "mkdocs-plugins.code-workspace",
  "Makefile",
  "CODE_OF_CONDUCT.md",
  ".isort.cfg",
  ".gitignore",
  ".flake8",
  "junit",
  "neoteroi-di.code-workspace",
  "requirements.txt"
]

[tool.hatch.version]
path = "neoteroi/di/__about__.py"

[project.urls]
"Homepage" = "https://github.com/Neoteroi/rodi"
"Bug Tracker" = "https://github.com/Neoteroi/rodi/issues"
